# Multi-file-projects

3. Hierarchy of classes/: 3. Hierarchy of classes.cpp  3. Hierarchy of classes.vcxproj  3. Hierarchy of classes.vcxproj.filters  Equilateral_triangle.cpp  Equilateral_triangle.h  Figure.cpp  Figure.h  Isosceles_triangle.cpp  Isosceles_triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Right_triangle.cpp  Right_triangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
3. Hierarchy of classes/Debug/: 3. Hierarchy of classes.exe.recipe  3. Hierarchy of classes.ilk  vc143.idb
3. Hierarchy of classes/Debug/3. Hiera.f51abade.tlog/: 3. Hierarchy of classes.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3. Hierarchy of classes/cmake/: CMakeLists.txt
3. Hierarchy of classes/x64/Debug/: 3. Hierarchy of classes.exe.recipe  3. Hierarchy of classes.ilk  vc143.idb
3. Hierarchy of classes/x64/Debug/3. Hiera.f51abade.tlog/: 3. Hierarchy of classes.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
